--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   command = "npm run build -- --no-strict"
   publish = "build"
+  
+  [[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
