--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_LINK_API=https://227a-188-26-209-77.ngrok.io/api/v1
+REACT_APP_LINK_API=https://8b52-2a0c-5a81-510a-ad00-6414-2416-bda1-9666.ngrok.io/api/v1
 
-REACT_APP_URL_SOCKET=https://227a-188-26-209-77.ngrok.io
+REACT_APP_URL_SOCKET=https://8b52-2a0c-5a81-510a-ad00-6414-2416-bda1-9666.ngrok.io/
