--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@google-cloud/text-to-speech": "^4.2.1",
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
     "@mui/icons-material": "^5.11.9",
@@ -14,11 +15,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
+    "file-saver": "^2.0.5",
     "install": "^0.13.0",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "lottie-react": "^2.3.1",
     "npm": "^9.4.1",
+    "print-js": "^1.6.0",
+    "puppeteer-core": "^19.7.2",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "react-redux": "^8.0.5",
@@ -26,8 +32,13 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-tag-input": "^6.8.1",
+    "react-to-print": "^2.14.12",
+    "react-tts": "^1.0.2",
+    "react-video-js": "^0.1.96",
+    "responsivevoice": "^0.4.1",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
+    "video.js": "^8.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
