--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_LINK_API=https://6dfc-2a0c-5a81-5101-f300-a930-d8c3-f9b5-9851.ngrok.io/api/v1
+REACT_APP_LINK_API=http://144.126.141.251:5005/api/v1
 
-REACT_APP_URL_SOCKET=https://6dfc-2a0c-5a81-5101-f300-a930-d8c3-f9b5-9851.ngrok.io
+REACT_APP_URL_SOCKET=http://144.126.141.251:5005/
