--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_LINK_API=http://144.126.141.251:5005/api/v1
+REACT_APP_LINK_API=https://5b62-2a0c-5a81-5101-f300-b0b3-e85f-3d3c-8567.ngrok.io/api/v1
 
-REACT_APP_URL_SOCKET=http://144.126.141.251:5005/
+REACT_APP_URL_SOCKET=https://5b62-2a0c-5a81-5101-f300-b0b3-e85f-3d3c-8567.ngrok.io
