--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_LINK_API=https://ef28-2a0c-5a81-5101-f300-ecf5-9a14-ad5e-85a9.ngrok.io/api/v1
+REACT_APP_LINK_API=http://144.126.141.251:5005/api/v1
 
-REACT_APP_URL_SOCKET=https://ef28-2a0c-5a81-5101-f300-ecf5-9a14-ad5e-85a9.ngrok.io
+REACT_APP_URL_SOCKET=http://144.126.141.251:5005
