--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-tag-input": "^6.8.1",
     "react-to-print": "^2.14.12",
     "react-tts": "^1.0.2",
     "react-video-js": "^0.1.96",
     "responsivevoice": "^0.4.1",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
     "video.js": "^8.0.4",
